refactored: getFirst method error fixed